feat: make image reference tasks asynchronous
